# mlops-churn-platform

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  train.yml
scripts/: detect_drift.py  inject_drift.py
src/churn/: __init__.py  config.py  logging_setup.py  seeds.py
src/churn/data/: __init__.py  download.py  ingest.py  schema.py  splits.py
src/churn/evaluation/: __init__.py  compare.py  metrics.py
src/churn/features/: __init__.py  pipeline.py  transformers.py
src/churn/models/: __init__.py  base.py  logreg.py  registry.py  tabular_mlp.py  xgboost_model.py
src/churn/monitoring/: __init__.py  drift.py  report.py
src/churn/serving/: __init__.py  app.py  loader.py  schemas.py
src/churn/training/: __init__.py  metrics.py  mlflow_utils.py  promote.py  train.py  tune.py  tune_spaces.py
tests/: conftest.py
tests/behavior/: test_directional.py  test_invariance.py  test_min_performance.py
tests/fixtures/: telco_sample.csv
tests/unit/: test_compare.py  test_config.py  test_download.py  test_drift.py  test_drift_endpoint.py  test_drift_report.py  test_evaluation_metrics.py  test_feature_pipeline.py  test_ingest.py  test_inject_drift.py  test_loader.py  test_logging_setup.py  test_logreg.py  test_metrics.py  test_mlflow_utils.py  test_model_base.py  test_models_contract.py  test_promote.py  test_schema.py  test_seeds.py  test_serving_app.py  test_serving_schemas.py  test_splits.py  test_tabular_mlp.py  test_train.py  test_transformers.py  test_tune.py  test_tune_spaces.py  test_xgboost.py
